--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        NEXT_MONGODB_URI: ${NEXT_MONGODB_URI}
+        NEXT_MONGODB_URI: mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017/${MONGO_INITDB_DATABASE}?authSource=admin
         NEXT_PUBLIC_BASE_URL: ${NEXT_PUBLIC_BASE_URL}
         NEXT_PUBLIC_ENCRYPTION_KEY: ${NEXT_PUBLIC_ENCRYPTION_KEY}
         NEXT_PUBLIC_ENCRYPTION_IV: ${NEXT_PUBLIC_ENCRYPTION_IV}
@@ -15,12 +15,24 @@ services:
     restart: unless-stopped
     env_file:
       - .env
+    environment:
+      NEXT_MONGODB_URI: mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017/${MONGO_INITDB_DATABASE}?authSource=admin
+    networks:
+      - samay-network
 
   mongo:
     image: mongo:7.0
     restart: unless-stopped
     volumes:
       - samay-data:/data/db
+    env_file:
+      - .env
+    networks:
+      - samay-network
+
 
 volumes:
   samay-data:
+
+networks:
+  samay-network:
