chore: tiny misc changes

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
-# In production, NEXT_MONGODB_URI is the connection string
-# In development, NEXT_MONGODB_URI is mongodb://localhost:27017/samayPolls
-NEXT_MONGODB_URI=
-
 # In production, NEXT_PUBLIC_BASE_URL is the base URL of your deployment; like https://samay.app
 # In development, NEXT_PUBLIC_BASE_URL is http://localhost:3000
 NEXT_PUBLIC_BASE_URL=
@@ -11,3 +7,14 @@ NEXT_PUBLIC_BASE_URL=
 # Generate NEXT_PUBLIC_ENCRYPTION_IV using $openssl rand -hex 8
 NEXT_PUBLIC_ENCRYPTION_KEY=
 NEXT_PUBLIC_ENCRYPTION_IV=
+
+# Configuration for MongoDB container. Sample values are provided for local environment
+# Change the values as per needs for security
+MONGO_INITDB_ROOT_USERNAME=samay
+MONGO_INITDB_ROOT_PASSWORD=samayPassword
+MONGO_INITDB_DATABASE=samayPolls
+
+# In production, NEXT_MONGODB_URI is the connection string
+# In development, NEXT_MONGODB_URI is mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017/${MONGO_INITDB_DATABASE}?authSource=admin or just mongodb://localhost:27017/${MONGO_INITDB_DATABASE} if there's no auth
+# Uncomment the line below and set NEXT_MONGODB_URI if you wish to use a connection string for an external database directly (like on Atlas)
+# NEXT_MONGODB_URI=
