chore: clarify usage of MongoDB string and fix compose for mongo

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ MONGO_INITDB_ROOT_PASSWORD=samayPassword
 MONGO_INITDB_DATABASE=samayPolls
 
 # In production, NEXT_MONGODB_URI is the connection string
-# In development, NEXT_MONGODB_URI is mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017/${MONGO_INITDB_DATABASE}?authSource=admin or just mongodb://localhost:27017/${MONGO_INITDB_DATABASE} if there's no auth
+# In development, if using Docker, NEXT_MONGODB_URI is mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@database:27017/${MONGO_INITDB_DATABASE}?authSource=admin
+# If you wish to use a local database, you can use mongodb://localhost:27017/samayPolls
 # Uncomment the line below and set NEXT_MONGODB_URI if you wish to use a connection string for an external database directly (like on Atlas)
 # NEXT_MONGODB_URI=
