--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,8 @@ services:
     depends_on:
       - database
     restart: unless-stopped
+    ports:
+      - "3001:3000"
     env_file:
       - .env
     environment:
@@ -32,6 +34,3 @@ services:
 
 volumes:
   samay-data:
-
-networks:
-  samay-network:
